--- a/css/main.css
+++ b/css/main.css
@@ -266,27 +266,513 @@ th {
   padding: 0;
 }
 
-/* line 16, ../compass/base/_base.scss */
+/* line 51, ../compass/base/_base.scss */
+* {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+/* line 55, ../compass/base/_base.scss */
 body {
-  font-family: "quatro-slab", serif;
-  background-color: black;
+  font-family: "quatro-slab", georgia, serif;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+/* line 61, ../compass/base/_base.scss */
+h1 {
+  text-align: center;
+  font-size: 5em;
+  line-height: 1;
+  font-weight: 900;
+  margin-bottom: -10px;
+}
+/* line 67, ../compass/base/_base.scss */
+h1 .fa-stack {
+  font-size: 70%;
+  top: -11px;
+  margin-bottom: -10px;
+}
+
+/* line 74, ../compass/base/_base.scss */
+.date {
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  *zoom: 1;
+  *display: inline;
+  float: right;
+  font-size: 50%;
+  position: relative;
+  top: 25px;
+}
+
+/* line 82, ../compass/base/_base.scss */
+.site-heading {
+  font-size: 2em;
+  margin-bottom: 0;
+  color: #779e20;
+}
+
+/* line 88, ../compass/base/_base.scss */
+h2 {
+  font-size: 3em;
+  font-weight: 700;
+  margin: 0;
+  line-height: 1;
+}
+@media (min-width: 0em) and (max-width: 60em) {
+  /* line 88, ../compass/base/_base.scss */
+  h2 {
+    font-size: 2em;
+  }
+}
+/* line 96, ../compass/base/_base.scss */
+.entry h2 {
+  color: #24300a;
+  padding: 0;
+  line-height: 1;
+  font-size: 2em;
+  font-weight: 900;
+  margin: 0.67em 0;
+}
+
+/* line 107, ../compass/base/_base.scss */
+h3 {
+  font-size: 0.875em;
+  font-weight: 400;
+  margin: 0;
+}
+@media (min-width: 0em) and (max-width: 60em) {
+  /* line 107, ../compass/base/_base.scss */
+  h3 {
+    font-size: 0.75em;
+  }
+}
+/* line 114, ../compass/base/_base.scss */
+.entry h3 {
+  font-size: 2em;
+}
+
+/* line 120, ../compass/base/_base.scss */
+.not-yet h2 {
+  color: #24300a;
+}
+/* line 124, ../compass/base/_base.scss */
+.not-yet h3 {
+  color: #24300a;
+}
+
+/* line 130, ../compass/base/_base.scss */
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+/* line 135, ../compass/base/_base.scss */
+ul, ol {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+/* line 142, ../compass/base/_base.scss */
+.entry ul {
+  list-style: disc;
+  padding-left: 40px;
+}
+/* line 147, ../compass/base/_base.scss */
+.entry ol {
+  list-style: decimal;
+  padding-left: 40px;
+}
+
+/* line 154, ../compass/base/_base.scss */
+.intro {
+  text-align: center;
+  font-style: italic;
+  margin-bottom: 1.75em;
+  margin-top: 0;
+}
+
+/* line 161, ../compass/base/_base.scss */
+.posts {
+  background-color: #040501;
+}
+/* line 40, ../compass/base/_base.scss */
+.posts:before, .posts:after {
+  display: table;
+  content: "";
+  line-height: 0;
+}
+/* line 42, ../compass/base/_base.scss */
+.posts:after {
+  clear: both;
+}
+
+/* line 166, ../compass/base/_base.scss */
+.filters {
+  font-size: 0.70em;
+}
+/* line 168, ../compass/base/_base.scss */
+.filters ul {
+  text-align: center;
+  padding: 5px;
+}
+/* line 40, ../compass/base/_base.scss */
+.filters ul:before, .filters ul:after {
+  display: table;
+  content: "";
+  line-height: 0;
+}
+/* line 42, ../compass/base/_base.scss */
+.filters ul:after {
+  clear: both;
+}
+/* line 188, ../compass/base/_base.scss */
+.filters li {
+  display: inline;
+  padding: 2px 5px;
+  cursor: pointer;
+}
+/* line 192, ../compass/base/_base.scss */
+.filters li .tag {
+  display: inline;
+  color: #779e20;
+}
+/* line 197, ../compass/base/_base.scss */
+.filters li:hover .tag {
+  color: black;
+}
+/* line 200, ../compass/base/_base.scss */
+.filters li .tag.active {
+  text-decoration: underline;
+}
+
+/* line 206, ../compass/base/_base.scss */
+.container {
+  max-width: 35em;
+  padding: 20px;
+  margin-left: 320px;
+}
+
+/* line 213, ../compass/base/_base.scss */
+.container.post {
+  padding-top: 40px;
+}
+
+/* line 217, ../compass/base/_base.scss */
+.hide {
+  display: none;
+}
+
+/* line 221, ../compass/base/_base.scss */
+.salad {
+  float: left;
+  width: 20%;
+  border-right: 1px solid #24300a;
+  border-bottom: 1px solid #24300a;
+  -moz-transition: width 0.2s ease;
+  -o-transition: width 0.2s ease;
+  -webkit-transition: width 0.2s ease;
+  transition: width 0.2s ease;
+}
+/* line 229, ../compass/base/_base.scss */
+.salad img {
+  display: block;
+}
+@media (min-width: 0em) and (max-width: 60em) {
+  /* line 221, ../compass/base/_base.scss */
+  .salad {
+    width: 25%;
+  }
+}
+@media (min-width: 0em) and (max-width: 48em) {
+  /* line 221, ../compass/base/_base.scss */
+  .salad {
+    width: 33%;
+  }
+}
+@media (min-width: 0em) and (max-width: 30em) {
+  /* line 221, ../compass/base/_base.scss */
+  .salad {
+    width: 50%;
+  }
+}
+@media (min-width: 0em) and (max-width: 30em) {
+  /* line 221, ../compass/base/_base.scss */
+  .salad {
+    width: 50%;
+  }
+}
+@media (min-width: 0em) and (max-width: 20em) {
+  /* line 221, ../compass/base/_base.scss */
+  .salad {
+    width: 100%;
+  }
+}
+
+/* line 249, ../compass/base/_base.scss */
+.salad-wrap {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: #040501;
+  color: white;
+}
+/* line 258, ../compass/base/_base.scss */
+.salad-wrap:hover .salad-bg {
+  opacity: 0.5;
+  -moz-background-size: 125% auto;
+  -o-background-size: 125% auto;
+  -webkit-background-size: 125% auto;
+  background-size: 125% auto;
+}
+/* line 263, ../compass/base/_base.scss */
+.salad-wrap:hover .salad-summary {
+  -moz-transform: translateY(0%);
+  -ms-transform: translateY(0%);
+  -webkit-transform: translateY(0%);
+  transform: translateY(0%);
+  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
+  opacity: 1;
+}
+
+/* line 283, ../compass/base/_base.scss */
+.fa-cutlery {
+  color: #fff;
+}
+
+/* line 288, ../compass/base/_base.scss */
+.salad-layout-block img {
+  position: relative;
+  z-index: 10;
+}
+
+/* line 294, ../compass/base/_base.scss */
+.salad-thm {
+  z-index: 12;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+/* line 303, ../compass/base/_base.scss */
+.salad-bg {
+  opacity: 1;
+  transition-property: opacity, transform, background-size;
+  transition-duration: 0.1s, 0.2s;
+  transition-timing-function: ease, ease;
+  -moz-transform: translateY(0);
+  -ms-transform: translateY(0);
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 20;
+  -moz-background-size: 100% auto;
+  -o-background-size: 100% auto;
+  -webkit-background-size: 100% auto;
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+/* line 320, ../compass/base/_base.scss */
+.salad-summary {
+  position: absolute;
+  z-index: 30;
+  bottom: 0;
+  color: white;
+  padding: 20px 20px 0 20px;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+  -moz-transition: opacity 0.4s ease;
+  -o-transition: opacity 0.4s ease;
+  -webkit-transition: opacity 0.4s ease;
+  transition: opacity 0.4s ease;
+}
+/* line 331, ../compass/base/_base.scss */
+.salad-summary .fa {
+  color: white;
+}
+/* line 335, ../compass/base/_base.scss */
+.salad-summary p {
+  font-size: 0.875em;
+  margin-bottom: 0;
+  margin-top: 0;
+  line-height: 1.3;
+}
+/* line 342, ../compass/base/_base.scss */
+.salad-summary .summary {
+  margin-bottom: 0.75em;
+}
+/* line 345, ../compass/base/_base.scss */
+.salad-summary .summary span {
+  background-color: rgba(119, 158, 32, 0.5);
+}
+/* line 349, ../compass/base/_base.scss */
+.salad-summary .link {
+  font-style: italic;
+  font-weight: 400;
+  margin-bottom: 0.75em;
+}
+/* line 353, ../compass/base/_base.scss */
+.salad-summary .link a {
+  color: white;
+  text-decoration: none;
+}
+@media (min-width: 0em) and (max-width: 60em) {
+  /* line 359, ../compass/base/_base.scss */
+  .salad-summary p {
+    font-size: 0.75em;
+  }
+}
+
+/* line 365, ../compass/base/_base.scss */
+.open {
+  position: absolute;
+  z-index: 100;
+  top: 0;
+}
+
+/* line 388, ../compass/base/_base.scss */
+.recipe-wrap {
+  position: fixed;
+  top: 0;
+  left: auto;
+  right: auto;
+  bottom: 0;
+  z-index: 100;
+  width: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  background-color: rgba(4, 5, 1, 0.75);
+  color: #ffffcc;
+  font-size: 1.5em;
+  font-weight: 100;
+  padding: 15px 50px 15px 200px;
+}
+/* line 404, ../compass/base/_base.scss */
+.recipe-wrap img {
+  display: none;
+}
+/* line 407, ../compass/base/_base.scss */
+.recipe-wrap h2 {
+  position: fixed;
+  top: 25px;
+  left: 25px;
+}
+/* line 412, ../compass/base/_base.scss */
+.recipe-wrap h4 {
+  margin: 0.5em 0;
+  font-weight: 400;
+  color: #97c829;
+}
+/* line 417, ../compass/base/_base.scss */
+.recipe-wrap .close {
+  position: fixed;
+  top: 20px;
+  right: 20px;
   color: white;
 }
 
-/* line 22, ../compass/base/_base.scss */
-.container {
-  margin: 0 auto;
+/* line 425, ../compass/base/_base.scss */
+.post-side {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 300px;
+  height: 100%;
+  padding-top: 40px;
+  background-color: #97c829;
+  background-color: #ffffcc;
+}
+/* line 435, ../compass/base/_base.scss */
+.post-side h2 {
+  font-size: 11em;
+  padding: 20px 0 0 40px;
+  color: rgba(119, 158, 32, 0.5);
 }
 
-/* line 25, ../compass/base/_base.scss */
-header {
+/* line 442, ../compass/base/_base.scss */
+.after-post {
+  border-top: 1px solid #779e20;
+  padding-top: 10px;
+  margin-top: 10px;
+}
+/* line 446, ../compass/base/_base.scss */
+.after-post a {
+  color: black;
+}
+/* line 449, ../compass/base/_base.scss */
+.after-post ul {
   text-align: center;
 }
+/* line 40, ../compass/base/_base.scss */
+.after-post ul:before, .after-post ul:after {
+  display: table;
+  content: "";
+  line-height: 0;
+}
+/* line 42, ../compass/base/_base.scss */
+.after-post ul:after {
+  clear: both;
+}
+/* line 454, ../compass/base/_base.scss */
+.after-post li {
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  *zoom: 1;
+  *display: inline;
+  margin: 5px 10px;
+}
 
-/* line 29, ../compass/base/_base.scss */
-h1 {
-  font-weight: 800;
-  font-size: 4em;
+/* line 460, ../compass/base/_base.scss */
+.salad-info {
+  padding: 20px 20px;
+  top: 0;
+  left: 0;
+  position: absolute;
+  z-index: 12;
+  width: 100%;
+  height: 100%;
+  background-image: -moz-linear-gradient(315deg, rgba(4, 5, 1, 0.8) 0%, rgba(4, 5, 1, 0) 50%);
+  background-image: -webkit-linear-gradient(315deg, rgba(4, 5, 1, 0.8) 0%, rgba(4, 5, 1, 0) 50%);
+  background-image: linear-gradient(135deg, rgba(4, 5, 1, 0.8) 0%, rgba(4, 5, 1, 0) 50%);
+}
+
+/* line 474, ../compass/base/_base.scss */
+.salad-info-only {
+  padding: 20px;
+}
+
+/* line 478, ../compass/base/_base.scss */
+.step {
+  line-height: 1.8;
+  border-radius: 50%;
+  background-color: black;
+  color: white;
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  *zoom: 1;
+  *display: inline;
+  float: left;
+  margin-top: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  width: 30px;
+  height: 30px;
+  display: table-cell;
+  vertical-align: center;
+  text-align: center;
 }
 
 /*# sourceMappingURL=main.css.map */
